jenkins-manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: default
spec:
  selector:
    matchLabels:
      app: jenkins
      env: dev
      version: "2.387"
  serviceName: jenkins-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
        enc: dev
        version: "2.387"
    spec:
      securityContext:
            fsGroup: 1000 
            runAsUser: 1000
            runAsNonRoot: true
      serviceAccountName: jenkins
      terminationGracePeriodSeconds: 10
      containers:
      - name: jenkins
        image: dheerajlearningdocker/jenkins:v1.1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 2Gi
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: jnlp
        startupProbe:
          httpGet:
            path: '/login'
            port: 8080
          initialDelaySeconds: 90
          failureThreshold: 30  
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: "/login"
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe: 
          httpGet:
            path: "/login"
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: jenkins-config
          mountPath: /var/jenkins_home/casc_configs
      volumes:
      - name: jenkins-config
        configMap: 
          name: jcasc-config
  volumeClaimTemplates:
  - metadata:
      name: jenkins-home
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
