jenkins-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ui
  namespace: default
spec:
  selector:
    app: jenkins
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: jnkins-jnlp
  namespace: default
spec:
  selector:
    app: jenkins
  ports:
  - name: jnlp
    port: 50000
    targetPort: 50000
